Replace ICIS references with CCIS
After the removal of ister, the project was rebranded as
clr-cloud-init-svc.

Signed-off-by: John Akre <john.w.akre@intel.com>

--- a/parameters.conf
+++ b/parameters.conf
@@ -1,11 +1,11 @@
 #!/bin/bash
 uwsgi_app_dir=/usr/share/uwsgi
 uwsgi_socket_dir=/run/uwsgi
-icis_app_name=icis
+ccis_app_name=ccis
 
 web_root=/var/www
 ipxe_root=$web_root/ipxe
-icis_root=$web_root/$icis_app_name
+ccis_root=$web_root/$ccis_app_name
 tftp_root=/srv/tftp
 
 external_iface=eno1
